force-app/main/default/objects/Curriculum__c/Curriculum__c.object-meta.xml
<CustomObject>
    <label>Curriculum</label>
    <nameField>
        <label>Curriculum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curriculums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>