force-app/main/default/objects/Curriculum__c/fields/Capacity_Total__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Capacity Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>