force-app/main/default/objects/Curriculum__c/fields/Curriculum_Capacity_Report__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Capacity_Report__c</fullName>
    <formula>IF( ISBLANK(SchoolName__c), 
			&apos;&apos; , 
			HYPERLINK(&quot;/lightning/r/Report/00O3X00000D3ArkUAF/view?fv0=&quot; &amp;  SchoolName__r.Name &amp; &quot;&amp;fv1=&quot; &amp; Name, Name &amp; &quot; Curriculum Capacity Report&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Curriculum Capacity Report</label>
    <type>Text</type>
</CustomField>