force-app/main/default/objects/Curriculum__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Curriculums</relationshipLabel>
    <relationshipName>Curriculums</relationshipName>
    <type>Lookup</type>
</CustomField>