force-app/main/default/objects/Curriculum__c/fields/YearGrade__c.field-meta.xml
<CustomField>
    <fullName>YearGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year/Grade</label>
    <referenceTo>YearGrade__c</referenceTo>
    <relationshipLabel>Curriculums</relationshipLabel>
    <relationshipName>Curriculums</relationshipName>
    <type>Lookup</type>
</CustomField>