force-app/main/default/objects/Curriculum__c/listViews/Dubai_School.listView-meta.xml
<ListView>
    <fullName>Dubai_School</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Dubai</value>
    </filters>
    <label>Dubai School</label>
</ListView>