force-app/main/default/objects/Curriculum__c/listViews/Regents_School.listView-meta.xml
<ListView>
    <fullName>Regents_School</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SchoolName__c</field>
        <operation>contains</operation>
        <value>Regents</value>
    </filters>
    <label>Regents School</label>
</ListView>